Introduce full pagination support for Massages. Fixes #58
